--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -2,4 +2,4 @@
 	= f.input :email, autofocus: true, placeholder: 'email@example.com', label: false
 	= f.input :password, placeholder: 'password', label: false
 	= f.input :password_confirmation, placeholder: 'confirm password', label: false
-	= f.submit 'Продолжить', class: 'btn'
+	= f.submit 'Продолжить', class: 'button'
