--- a/app/views/admin/results/index.html.slim
+++ b/app/views/admin/results/index.html.slim
@@ -15,6 +15,6 @@
 					td = result.mark
 					td = result.mark_type
 					td 
-						= link_to 'Удалить', admin_result_path(result), method: :delete, data: {confirm: 'Are you sure?'}
+						= link_to 'Удалить', admin_result_path(result), method: :delete, data: {confirm: 'Are you sure?'}, class: "btn"
 .row-fluid
 	= link_to 'Назад', admin_root_path, class: 'btn'
