--- a/app/views/admin/tasks/_form.html.slim
+++ b/app/views/admin/tasks/_form.html.slim
@@ -20,4 +20,4 @@
 	br
 	= f.button :submit, class: 'btn'
 	'
-	= link_to 'Назад', admin_root_path, class: 'btn'
+	= link_to 'Назад', admin_tasks_path, class: 'btn'
