--- a/app/views/admin/tasks/index.html.slim
+++ b/app/views/admin/tasks/index.html.slim
@@ -20,4 +20,4 @@
 						= link_to 'Удалить', admin_task_path(task), method: :delete, data: {confirm: 'Are you sure?'}
 .row-fluid
 	= link_to 'Добавить', new_admin_task_path, class: 'btn'
-
+	= link_to 'Назад', admin_root_path, class: 'btn'
