--- a/app/views/admin/tasks/_form.html.slim
+++ b/app/views/admin/tasks/_form.html.slim
@@ -5,17 +5,7 @@
 	.row-fluid
 		= f.simple_fields_for :questions, @questions do |ff|
 			.questions
-				h4 Вопрос:	
-				blockquote.row-fluid
-					= ff.input :text, input_html: { class: 'span12' }
-					= ff.simple_fields_for :answers, @answers do |fff|
-						.answers
-							h4 Ответ:
-							blockquote.row-fluid
-								.span10 = fff.input :text, input_html: { class: 'span12' }
-								.span2 = fff.input :correct, collection: [['Нет', false], ['Да', true]], include_blank: false, input_html: { class: 'span8' }
-							.row-fluid 
-								.pull-right = link_to_add_fields "Add Answer", ff, :answers
+				= render partial: "question_fields", locals: { f: ff }
 	.row-fluid = link_to_add_fields "Add Question", f, :questions
 	br
 	= f.button :submit, class: 'btn'
