--- a/app/views/admin/tasks/_question_fields.html.slim
+++ b/app/views/admin/tasks/_question_fields.html.slim
@@ -4,10 +4,8 @@
 		= f.input :text, input_html: { class: 'span12' }
 		= f.simple_fields_for :answers, @answers do |ff|
 			.answers
-				h4 Ответ:
-				blockquote.row-fluid
-					.span10 = ff.input :text, input_html: { class: 'span12' }
-					.span2 = ff.input :correct, collection: [['Нет', false], ['Да', true]], include_blank: false, input_html: { class: 'span8' }
-				.row-fluid 
-					.pull-right = link_to_add_fields "Add Answer", f, :answers
-		= link_to_remove_fields "remove", f
+				= render partial: "answer_fields", locals: { f: ff }
+		.pull-right 
+			= link_to_add_fields "Add Answer", f, :answers
+			'
+			= link_to_remove_fields "remove", f
