--- a/app/views/admin/tasks/_answer_fields.html.slim
+++ b/app/views/admin/tasks/_answer_fields.html.slim
@@ -1,6 +1,5 @@
 .fields
-	h4 Ответ:
 	blockquote.row-fluid
-		.span10 = f.input :text, input_html: { class: 'span12' }
-		.span2 = f.input :correct, collection: [['Нет', false], ['Да', true]], include_blank: false, input_html: { class: 'span8' }
-		= link_to_remove_fields "remove", f
+		.span10 = f.input :text, input_html: { class: 'span12' }, label: t(".answer")
+		.span2 = f.input :correct, collection: [['Нет', false], ['Да', true]], include_blank: false, input_html: { class: 'span8' }, label: t(".correct")
+		= link_to_remove_fields t(".remove"), f
