--- a/app/views/admin/tasks/_question_fields.html.slim
+++ b/app/views/admin/tasks/_question_fields.html.slim
@@ -1,11 +1,10 @@
 .fields
-	h4 Вопрос:	
 	blockquote.row-fluid
-		= f.input :text, input_html: { class: 'span12' }
+		= f.input :text, input_html: { class: 'span12' }, label: t(".question")
 		= f.simple_fields_for :answers, @answers do |ff|
 			.answers
 				= render partial: "answer_fields", locals: { f: ff }
 		.pull-right 
-			= link_to_add_fields "Add Answer", f, :answers
-			'
-			= link_to_remove_fields "remove", f
+			= link_to_add_fields t(".add_answer"), f, :answers
+			|  \ 
+			= link_to_remove_fields t(".remove"), f
