--- a/app/views/admin/tasks/_answer_fields.html.slim
+++ b/app/views/admin/tasks/_answer_fields.html.slim
@@ -1,5 +1,5 @@
 .fields
 	blockquote.row-fluid
 		.span10 = f.input :text, input_html: { class: 'span12' }, label: t(".answer")
-		.span2 = f.input :correct, collection: [['Нет', false], ['Да', true]], include_blank: false, input_html: { class: 'span8' }, label: t(".correct")
+		.span2 = f.input :correct, collection: [[t(".noo"), false], [t(".yess"), true]], include_blank: false, input_html: { class: 'span8' }, label: t(".correct")
 		= link_to_remove_fields t(".remove"), f
