--- a/app/views/admin/tasks/index.html.slim
+++ b/app/views/admin/tasks/index.html.slim
@@ -6,22 +6,23 @@ br
 	table.table.table-striped.table-bordered
 		thead
 			tr
-				th style="width: 10%;" id
-				th style="width: 40%;" name
-				th style="width: 50%;" action
+				th style="width: 10%;" #
+				th style="width: 40%;" #{t(".name")}
+				th style="width: 50%;" #{t(".action")}
 		tbody
 			- @tasks.each do |task|
 				tr
 					td = task.id
 					td = task.name
 					td
-						= link_to 'История', admin_results_path(by_task_id: task.id)
+						= link_to t(".history"), admin_results_path(by_task_id: task.id)
 						|  \ 
-						= link_to 'Просмотр', admin_task_path(task)
+						= link_to t(".review"), admin_task_path(task)
 						|  \ 
-						= link_to 'Редактировать', edit_admin_task_path(task)
+						= link_to t(".edit"), edit_admin_task_path(task)
 						|  \  
-						= link_to 'Удалить', admin_task_path(task), method: :delete, data: {confirm: 'Are you sure?'}
+						= link_to t(".del"), admin_task_path(task), method: :delete, data: {confirm: t(".ask")}
 .row-fluid
-	= link_to 'Добавить', new_admin_task_path, class: 'btn'
-	= link_to 'Назад', admin_root_path, class: 'btn'
+	= link_to t(".added"), new_admin_task_path, class: 'button'
+	|&nbsp
+	= link_to t(".back"), admin_root_path, class: 'button'
