fix bugs with design

--- a/app/views/admin/tasks/_question_fields.html.slim
+++ b/app/views/admin/tasks/_question_fields.html.slim
@@ -6,5 +6,5 @@
 				= render partial: "answer_fields", locals: { f: ff }
 		.pull-right 
 			= link_to_add_fields t(".add_answer"), f, :answers
-			|  \ 
+		.pull-left
 			= link_to_remove_fields t(".remove"), f
