--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,10 +10,11 @@ html
 		= render 'layouts/header'
 		div#vk_wrap._vpan.qs_enabled._js._copts
 			.container-fluid
-				- if user_signed_in?
-					= link_to t(".out_U"), destroy_user_session_path, method: :delete, class: 'btn'
-				- if admin_signed_in?
-					= link_to t(".out_A"), destroy_admin_session_path, method: :delete, class: 'btn'
+				.pull-right
+					- if user_signed_in?
+						= link_to t(".out"), destroy_user_session_path, method: :delete, class: "inverse_link"
+					- if admin_signed_in?
+						= link_to t(".out"), destroy_admin_session_path, method: :delete, class: "inverse_link"
 			div.hb_btn
 				|&nbsp;
 			#flash-section= flash_messages
