fixed bug with button

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -36,10 +36,13 @@
 }
 
 .button:hover {
-	color: #fff;
-	display: inline-block;
+	color: #fff;	
 }
 
 .inverse_link {
 	color: #fff;
+}
+
+label, input, button, select, textarea {
+	line-height: normal;
 }
