design for tasting

--- a/app/views/admin/results/index.html.slim
+++ b/app/views/admin/results/index.html.slim
@@ -15,6 +15,6 @@
 					td = result.mark
 					td = result.mark_type
 					td 
-						= link_to t(".del"), admin_result_path(result), method: :delete, data: {confirm: t(".ask")}, class: "button"
+						= link_to t(".del"), admin_result_path(result), method: :delete, data: {confirm: t(".ask")}
 .row-fluid
 	= link_to t(".back"), admin_root_path, class: 'button'
