--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,8 +1,10 @@
 .row-fluid
 	= simple_form_for @task do |f|
+		h2
+			| #{t(".title")} "#{@task.name}"
 		.row-fluid
 			= f.simple_fields_for :questions, @question do |ff|
-				h4 = @question.text
+				h3 = @question.text
 				= ff.association :answers, as: :check_boxes, collection: @question.answers, label_method: :text, value_method: :id, label: false, checked: false
 		.row-fluid
 			= f.submit t('.reply'), class: 'button'
