style for testing

--- a/app/views/admin/admins/index.html.slim
+++ b/app/views/admin/admins/index.html.slim
@@ -1,4 +1,5 @@
-.row-fluid
-	= link_to t(".asked"), admin_tasks_path, class: 'button'
-	|&nbsp
-	= link_to t(".result"), admin_results_path, class: 'button'
+.container-fluid
+	.row-fluid
+		= link_to t(".asked"), admin_tasks_path, class: 'button'
+		|&nbsp
+		= link_to t(".result"), admin_results_path, class: 'button'
