--- a/app/views/admin/tasks/show.html.slim
+++ b/app/views/admin/tasks/show.html.slim
@@ -18,4 +18,5 @@
 									|&nbsp;
 									= answer.text
 br
-= link_to t(".home"), admin_tasks_path, class: 'button'
+.pull-right
+	= link_to t(".home"), admin_tasks_path, class: 'button'
