--- a/app/views/admin/results/index.html.slim
+++ b/app/views/admin/results/index.html.slim
@@ -17,4 +17,5 @@
 					td 
 						= link_to t(".del"), admin_result_path(result), method: :delete, data: {confirm: t(".ask")}
 .row-fluid
-	= link_to t(".back"), admin_root_path, class: 'button'
+	.pull-right
+		= link_to t(".back"), admin_root_path, class: 'button'
