--- a/app/views/admin/tasks/show.html.slim
+++ b/app/views/admin/tasks/show.html.slim
@@ -18,5 +18,6 @@
 									|&nbsp;
 									= answer.text
 br
-.pull-right
-	= link_to t(".home"), admin_tasks_path, class: 'button'
+.form-actions
+	.pull-right
+		= link_to t(".home"), admin_tasks_path, class: 'button'
