--- a/app/views/tasks/destroy.html.slim
+++ b/app/views/tasks/destroy.html.slim
@@ -4,5 +4,6 @@ h2
 h3 
 	= t(".ball") 
 	= @result.mark
-.pull-right
-	= link_to t(".back"), tasks_path, class: 'button'
+.form-actions
+	.pull-right
+		= link_to t(".back"), tasks_path, class: 'button'
