--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -13,10 +13,16 @@ h2
     = f.input :password_confirmation, :required => false
     = f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true
   .form-actions
-    = f.button :submit, "Update"
+    .pull-right
+      = f.button :submit, "Update"
 h3
   | Cancel my account
 p
   | Unhappy? 
   = link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete
-= link_to "Back", :back
+.form-actions
+  .pull-right
+    - if admin_signed_in?
+      = link_to "Back", admin_tasks_path, class: "button"
+    - if user_signed_in?
+      = link_to "Back", tasks_path, class: "button"
