--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,8 +1,16 @@
-div id="mfoot" class="mfoot"
-	ul class="footer_menu"
-		li class="fm_row"
+div#mfoot.mfoot
+	ul.footer_menu
+		li.fm_row
 			= link_to "English", languages_path(locale: "en")
 			'
 			| -
 			'
 			= link_to "Русский", languages_path(locale: "ru")
+		- if admin_signed_in?
+			li
+				= t(".edit")
+				= link_to t(".here"), edit_admin_registration_path
+		- if user_signed_in?
+			li
+				= t(".edit")
+				= link_to t(".here"), edit_user_registration_path
