--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,6 +1,8 @@
-.row-fluid
-	= form_tag(search_tasks_path, class: "form-search")
-    = text_field_tag :search, "", placeholder: t(".search"), id: "appendedInputButton"
+.container-fluid
+	.row-fluid
+		.pull-right
+			= form_tag(search_tasks_path, class: "form-search")
+		    = text_field_tag :search, "", placeholder: t(".search"), id: "appendedInputButton"
 br
 .row-fluid
 	table.table.table-striped.table-bordered
