fixed bug if login

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html
 				div.pcont.fit_box.bl_cont
 					div.form_item.fi_fat
 						.container-fluid	
-							- if devise_controller?
+							- if !user_signed_in? && !admin_signed_in?
 								ul.nav.nav-tabs
 									li class="#{:active if devise_mapping.name == :admin}"
 										a href="#{new_admin_session_path}" #{t(".admin")}
