--- a/app/views/admin/tasks/index.html.slim
+++ b/app/views/admin/tasks/index.html.slim
@@ -2,7 +2,9 @@
 	.row-fluid
 		.pull-right
 			= form_tag(search_admin_tasks_path, class: "form-search")
-	    	= text_field_tag :search, "", placeholder: t(".search"), id: "appendedInputButton"
+				= text_field_tag :search, "", placeholder: t(".search"), id: "appendedInputButton"
+				|&nbsp;
+				= link_to image_tag('images.jpg', size: "24x24"), admin_tasks_path
 br
 .row-fluid
 	table.table.table-striped.table-bordered
