--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -7,7 +7,8 @@
 				= f.simple_fields_for :questions, @question do |ff|
 					h3 = @question.text
 					div.container-fluid
-						= ff.association :answers, as: :check_boxes, collection: @question.answers, label_method: :text, value_method: :id, label: false, checked: false
+						.row-fluid
+							= ff.association :answers, as: :check_boxes, collection: @question.answers, label_method: :text, value_method: :id, label: false, checked: false
 			.form-actions
 				.pull-right
 					= f.submit t('.reply'), class: 'button'
