--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,8 @@ html
   	= stylesheet_link_tag "application", :media => "all"
   	= javascript_include_tag "application"
   	= csrf_meta_tags
+  	link rel="shortcut icon" href="/favicon.ico"
+
 	
 	body#vk._hover._lm
 		= render 'layouts/header'
