--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html
   	= stylesheet_link_tag "application", :media => "all"
   	= javascript_include_tag "application"
   	= csrf_meta_tags
-  	link rel="shortcut icon" href="/favicon.ico"
+  	link rel="shortcut icon" href="http://www.startel.kz/sites/default/files/st.png" type="image/x-icon"
 
 	
 	body#vk._hover._lm
