--- a/app/views/devise/mailer/reset_password_instructions.html.slim
+++ b/app/views/devise/mailer/reset_password_instructions.html.slim
@@ -1,12 +1,12 @@
 p
-  | Hello 
+  = t(".hello")
   = @resource.email
   | !
 p
-  | Someone has requested a link to change your password. You can do this through the link below.
+  = t(".link")
 p
-  = link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
+  = link_to t(".change"), edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
 p
-  | If you didn't request this, please ignore this email.
+  = t(".not")
 p
-  | Your password won't change until you access the link above and create a new one.
+  = t(".createanew")
