--- a/app/views/admin/results/index.html.slim
+++ b/app/views/admin/results/index.html.slim
@@ -5,15 +5,17 @@
 				th style="width: 20%;" #
 				th style="width: 20%;" #{t(".user")}
 				th style="width: 20%;" #{t(".mark")}
-				th style="width: 20%;" #{t(".mark_type")}
 				th style="width: 20%;" #{t(".action")}
 		tbody
 			- @results.each do |result|
 				tr
 					td = result.id
-					td = result.user
-					td = result.mark
-					td = result.mark_type
+					td = result.user.full_name
+					td 
+						- if result.task.check?
+							= result.mark
+						- else
+							= link_to t(".result"), admin_result_path(result)
 					td 
 						= link_to t(".del"), admin_result_path(result), method: :delete, data: {confirm: t(".ask")}
 .form-actions
