--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -8,7 +8,10 @@
 					h3 = @question.text
 					.container-fluid
 						.row-fluid
-							= ff.association :answers, as: :check_boxes, collection: @question.answers, label_method: :text, value_method: :id, label: false, checked: false
+							- if @task.check?
+								= ff.association :answers, as: :check_boxes, collection: @question.answers, label_method: :text, value_method: :id, label: false, checked: false
+							- else
+								= text_area :text, ''
 			.form-actions
 				.pull-right
 					= f.submit t('.reply'), class: 'button'
