added css foor text_area, locales to tasc_controller, fixed bag in models, locales in views, edit devise/registration, added spec

--- a/app/views/admin/tasks/index.html.slim
+++ b/app/views/admin/tasks/index.html.slim
@@ -25,14 +25,14 @@ br
 						|  \  
 						= link_to t(".del"), admin_task_path(task), method: :delete, data: {confirm: t(".ask")}
 						|  \ 
-						= link_to "Download CSV", admin_task_path(task, format: "csv")
+						= link_to t(".dwl"), admin_task_path(task, format: "csv")
 .row-fluid
 	= form_tag import_admin_tasks_path, multipart: true do
 		= file_field_tag :file
-		= submit_tag "Import", class: "button"
+		= submit_tag t(".imp"), class: "button"
 .form-actions
 	.pull-left
-		= link_to "Download all CSV", admin_tasks_path(format: "csv")
+		= link_to t(".dwl_all"), admin_tasks_path(format: "csv")
 	.pull-right
 		= link_to t(".added"), new_admin_task_path, class: 'button'
 		|&nbsp
