--- a/app/views/admin/results/index.html.slim
+++ b/app/views/admin/results/index.html.slim
@@ -4,7 +4,7 @@
 			tr
 				th style="width: 20%;" #
 				th style="width: 20%;" #{t(".user")}
-				th style="width: 20%;" #{t(".mark")}
+				th style="width: 20%;" #{t(".mark_type")}
 				th style="width: 20%;" #{t(".action")}
 		tbody
 			- @results.each do |result|
