--- a/app/views/admin/results/show.html.slim
+++ b/app/views/admin/results/show.html.slim
@@ -3,8 +3,8 @@
 		thead
 			tr
 				th style="width: 20%;" #
-				th style="width: 40%;" #
-				th style="width: 40%;" #
+				th style="width: 40%;" #{t(".question")}
+				th style="width: 40%;" #{t(".answer")}
 		tbody
 			- @result.write_answers.each do |answer|
 				tr
@@ -14,4 +14,4 @@
 
 .form-actions
 	.pull-right
-		= link_to t(".back"), admin_root_path, class: 'button'
+		= link_to t(".back"), admin_results_path, class: 'button'
