--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,7 +24,7 @@ html
 				div.pcont.fit_box.bl_cont
 					div.form_item.fi_fat
 						.container-fluid	
-							- if !user_signed_in? && !admin_signed_in?
+							- if devise_session_controler? 
 								ul.nav.nav-tabs
 									li class="#{:active if devise_mapping.name == :admin}"
 										a href="#{new_admin_session_path}" #{t(".admin")}
