--- a/app/views/admin/tasks/show.html.slim
+++ b/app/views/admin/tasks/show.html.slim
@@ -9,6 +9,8 @@
 						h3
 							= t(".Question")
 							= question.text
+							br
+							= image_tag question.avatar_url.to_s
 					.container-fluid
 						.row-fluid
 							ul
