--- a/app/views/admin/tasks/_form.html.slim
+++ b/app/views/admin/tasks/_form.html.slim
@@ -9,10 +9,9 @@
 		.span4 = f.input :max_mark, label: t(".max_mark")
 	hr
 	.row-fluid
-		= f.simple_fields_for :questions, @questions, :html => {:multipart => true} do |ff|
+		= f.simple_fields_for :questions, @questions do |ff|
 			.questions
 				= render partial: "question_fields", locals: { f: ff }
-				= ff.file_field :avatar
 	.row-fluid = link_to_add_fields t(".add_question"), f, :questions
 	br
 	.form-actions
