--- a/app/views/admin/tasks/_question_fields.html.slim
+++ b/app/views/admin/tasks/_question_fields.html.slim
@@ -1,6 +1,8 @@
 .fields
 	blockquote.row-fluid
-		= f.input :text, input_html: { class: 'span12' }, label: t(".question")
+		.span8 = f.input :text, input_html: { class: 'span12' }, label: t(".question")
+		.span2 = f.file_field :avatar
+		br
 		= f.simple_fields_for :answers, @answers do |ff|
 			.answers
 				= render partial: "answer_fields", locals: { f: ff }
