style and size for img,

--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -6,6 +6,7 @@
 			.row-fluid
 				= f.simple_fields_for :questions, @question do |ff|
 					h3 = @question.text
+					.pull-right = image_tag(@question.avatar_url(:thumb)) if @question.avatar?
 					.container-fluid
 						.row-fluid
 							- if @task.check?
