--- a/app/views/admin/tasks/show.html.slim
+++ b/app/views/admin/tasks/show.html.slim
@@ -10,16 +10,18 @@
 							= t(".Question")
 							= question.text
 							br
-							= image_tag(question.avatar_url) if question.avatar?
-					.container-fluid
-						.row-fluid
-							ul
-								- question.answers.each_with_index do |answer, i|
-									li 
-										h4
-											= i+1
-											|&nbsp;
-											= answer.text
+							.pull-right = image_tag(question.avatar_url(:thumb)) if question.avatar?
+						.container-fluid
+							.row-fluid
+								ul
+									- question.answers.each_with_index do |answer, i|
+										li 
+											h4
+												= i+1
+												|&nbsp;
+												= answer.text
 		.form-actions
 			.pull-right
+				= link_to t(".edit"), edit_admin_task_path(@task.id), class: 'button'
+				|&nbsp;
 				= link_to t(".home"), admin_tasks_path, class: 'button'
