--- a/app/views/admin/tasks/index.html.slim
+++ b/app/views/admin/tasks/index.html.slim
@@ -1,8 +1,10 @@
 .container-fluid
 	.row-fluid
 		.pull-right
-			= form_tag(search_admin_tasks_path, class: "form-search")
-				= text_field_tag :search, "", placeholder: t(".search"), id: "appendedInputButton"
+			= form_tag(search_admin_tasks_path, class: "form-search", method: :get)
+				= text_field_tag :term, "", data: {autocomplete_source: 	search_admin_tasks_path}, placeholder: t(".search")
+				|&nbsp;
+				= button_tag t(".search"), class: "button"
 				|&nbsp;
 				= link_to image_tag('images.jpg', size: "24x24"), admin_tasks_path
 br
