fixed so many bag

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -38,7 +38,12 @@
 .inverse_link {
 	color: #fff;
 }
-
+.inverse_link:link {
+	color: #fff;
+}
+.inverse_link:hover {
+	color: #fff;
+}
 label, input, button, select, textarea {
 	line-height: normal;
 }
