--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,7 +8,6 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  *= require_tree .
  *= require jquery-ui
  */
@@ -36,4 +35,16 @@
 
 .button.btn_active {
 	background: linear-gradient(#042e53, #4f799e);
+}
+.sft {
+	margin-top: 10px;
+	font-family: 'times new roman', times, serif;
+	font-size: 24px;
+	font-weight: bold;
+}
+._hover a:hover {
+	text-decoration: none;
+}
+a:hover a:focus{
+	text-decoration: none;
 }
