--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,6 +41,7 @@
 	font-family: 'times new roman', times, serif;
 	font-size: 24px;
 	font-weight: bold;
+	text-shadow: 2px 1px 2px black, 0 0 1em #001d40;
 }
 ._hover a:hover {
 	text-decoration: none;
