--- a/app/views/admin/results/index.html.slim
+++ b/app/views/admin/results/index.html.slim
@@ -2,8 +2,9 @@
 	table.table.table-striped.table-bordered
 		thead
 			tr
-				th style="width: 20%;" #
+				th style="width: 10%;" #
 				th style="width: 20%;" #{t(".user")}
+				th style="width: 20%;" #{t(".test_name")}
 				th style="width: 20%;" #{t(".mark_type")}
 				th style="width: 20%;" #{t(".action")}
 		tbody
@@ -11,6 +12,7 @@
 				tr
 					td = result.id
 					td = result.user.full_name
+					td = result.task.name
 					td 
 						- if result.task.check?
 							= result.mark
