--- a/app/views/admin/tasks/_question_fields.html.slim
+++ b/app/views/admin/tasks/_question_fields.html.slim
@@ -1,17 +1,15 @@
 .fields
 	blockquote.row-fluid
-		.span8 = f.input :text, input_html: { class: 'span12' }, label: t(".question")
-		.span2 
-			= image_tag f.object.avatar_url(:mini)
+		.span12 = f.input :text, input_html: { class: 'span12' }, label: t(".question")
+		.row-fluid
+			= image_tag f.object.avatar_url(:mini) 
+			|&nbsp;
 			= f.file_field :avatar
 			= f.hidden_field :avatar_cache
-		br
-		.row-fluid
-			.pull-right
-				= link_to_remove_fields t(".remove"), f
-			= f.simple_fields_for :answers, @answers do |ff|
-				.answers
-					= render partial: "answer_fields", locals: { f: ff }
-			br
-			.pull-right 
-				= link_to_add_fields t(".add_answer"), f, :answers
+		.row-fluid.pull-right
+			.row-fluid
+				= f.simple_fields_for :answers, @answers do |ff|
+					.answers
+						= render partial: "answer_fields", locals: { f: ff }
+						= link_to_add_fields t(".add_answer"), f, :answers
+	= link_to_remove_fields t(".remove"), f
