--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -4,11 +4,13 @@
 			thead
 				tr
 					th style="width: 10%;" #
-					th style="width: 70%;" #{t(".test_name")}
+					th style="width: 30%;" #{t(".admin_name")}
+					th style="width: 30%;" #{t(".test_name")}
 					th style="width: 20%;" #{t(".mark_type")}
 			tbody
 				- @results.each do |result|
 					tr
 						td = result.id
+						td = result.task.admin.full_name
 						td = result.task.name
 						td = result.mark
