--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,3 +49,19 @@
 a:hover a:focus{
 	text-decoration: none;
 }
+
+.remove_link {
+	color: #323232;
+	font-size: 25px;
+}
+
+.fields {
+	margin: 10px;
+	padding: 10px;
+	border: 1px solid #333333;
+	box-shadow: 5px 5px 5px #888;
+}
+
+.hide {
+	display: none;
+}
