fixed bug affix, form style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,8 +58,8 @@ a:hover a:focus{
 .fields {
 	margin: 10px;
 	padding: 10px;
-	border: 1px solid #333333;
-	box-shadow: 5px 5px 5px #888;
+	border: 1px solid #5E88AD;
+	box-shadow: 5px 5px 5px #4f799e;
 }
 
 .hide {
