--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -13,12 +13,14 @@ br
 		thead
 			tr
 				th style="width: 10%;" #
-				th style="width: 70%;" #{t(".name")}
+				th style="width: 30%;" #{t(".admin_name")}
+				th style="width: 30%;" #{t(".name")}
 				th style="width: 20%;" #{t(".action")}
 		tbody
 			- @tasks.each do |task|
 				tr
 					td = task.id
+					td = task.admin.full_name
 					td = link_to task.name, tasks_path(task_id: task.id), method: :post, data: {confirm: t(".ask")}
 					td  
 						= link_to t(".start"), tasks_path(task_id: task.id), method: :post, data: {confirm: t(".ask")}
