call admin name

--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -20,6 +20,6 @@
 				- @results.each do |result|
 					tr
 						td = result.id
-						td = result.task.admin.full_name
+						td = result.admin.full_name
 						td = result.task.name
 						td = result.mark
