--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -9,7 +9,7 @@
 				= link_to image_tag('images.jpg', size: "24x24"), results_path
 	br
 	.row-fluid
-		table.table.table-striped.table-bordered
+		table.table.table-striped.table-bordered.tablesorter#tablesorter
 			thead
 				tr
 					th style="width: 10%;" #
