--- a/app/views/admin/results/show.html.slim
+++ b/app/views/admin/results/show.html.slim
@@ -1,5 +1,5 @@
 .row-fluid
-	table.table.table-striped.table-bordered
+	table.table.table-striped.table-bordered.tablesorter#tablesorter
 		thead
 			tr
 				th style="width: 10%;" #
